--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,17 @@ node_js:
   
 before script: 
   - npm install
+
 script:
   - echo "Antes de la construcción"
   - npm build
+  - ls
+
+deploy:
+  provider: pages
+  local-dir: build/
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  keep_history: true
+  on:
+    branch: master
